--- a/campfirenow/flare.csproj
+++ b/campfirenow/flare.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{06BE0DFD-6BCF-4BE2-8C45-1293D271C18D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -178,6 +178,7 @@
     <None Include="Resources\newMsg.ico" />
     <None Include="Resources\noNewMsgs.ICO" />
     <Content Include="Flare48.ico" />
+    <Content Include="Resources\updates.xml" />
     <Content Include="waiting.htm" />
     <Content Include="indicator2.gif" />
   </ItemGroup>
